Fix a little padding issue.
When the nav was "collapsed" but mobile-sized (which would probably
never really happen), there was extra padding on a current nav item with
a link in it.

--- a/theme/tailwind.css
+++ b/theme/tailwind.css
@@ -359,7 +359,7 @@
 
         &.current a {
           @apply
-            mx-0
+            md:mx-0
             -my-3;
         }
 
